cisco_view: change error 404 to 400
Negative limit or offset should return 400 instead of 404
