# xivo_dird/swagger/api.json
@@ -50,12 +50,6 @@
                             "text/xml": "<CiscoIPPhoneMenu> <MenuItem> <Name>XiVO Directory</Name> <URL>http://proxy-url?vendor=cisco'&amp;xivo_user_uuid=1234</URL> </MenuItem> </CiscoIPPhoneMenu>"
                         }
                     },
-                    "404": {
-                        "description": "The lookup profile does not exist",
-                        "schema": {
-                            "$ref": "#/definitions/Error"
-                        }
-                    },
                     "503": {
                         "description": "Another service is unavailable (e.g. xivo-auth, consul, ...)",
                         "schema": {
@@ -111,8 +105,8 @@
                             "text/xml": " <CiscoIPPhoneDirectory> <DirectoryEntry> <Name>Alice</Name> <Telephone>5555555555</Telephone> </DirectoryEntry> </CiscoIPPhoneDirectory><SoftKeyItem> <Name>PrevPage</Name> <URL>https://xivo-dird:9489/0.1/directories/lookup/default_phone/cisco?xivo_user_uuid=000000-0000-0000-0000-000000000000&amp;term=Alice&amp;limit=1&amp;offset=1</URL> <Position>2</Position> </SoftKeyItem> <SoftKeyItem> <Name>Exit</Name> <URL>SoftKey:Exit</URL> <Position>3</Position> </SoftKeyItem> <SoftKeyItem> <Name>NextPage</Name> <URL>https://xivo-dird:9489/0.1/directories/lookup/default_phone/cisco?xivo_user_uuid=000000-0000-0000-0000-000000000000&amp;term=Alice&amp;limit=1&amp;offset=2</URL> <Position>4</Position> </SoftKeyItem> </CiscoIPPhoneDirectory>"
                         }
                     },
-                    "404": {
-                        "description": "The lookup profile does not exist",
+                    "400": {
+                        "description": "The limit or offset should be positive",
                         "schema": {
                             "$ref": "#/definitions/Error"
                         }
